// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleActions Component Basic Rendering should match snapshot in normal state 1`] = `
<View
  style={
    {
      "paddingBottom": 24,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <TouchableOpacity
      accessibilityLabel="Cancel scheduling"
      accessibilityRole="button"
      disabled={false}
      onPress={[MockFunction]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 28,
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 14,
          },
          {},
          {
            "backgroundColor": "#E9F1EB",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "600",
            },
            {
              "color": "#1A2520",
            },
          ]
        }
      >
        Cancel
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityLabel="Schedule meeting"
      accessibilityRole="button"
      disabled={false}
      onPress={[MockFunction]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 28,
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 14,
          },
          {},
          {
            "backgroundColor": "#1A2520",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "600",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Schedule Meeting
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`ScheduleActions Component Loading State should match snapshot in loading state 1`] = `
<View
  style={
    {
      "paddingBottom": 24,
      "paddingHorizontal": 16,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <TouchableOpacity
      accessibilityLabel="Cancel scheduling"
      accessibilityRole="button"
      disabled={true}
      onPress={[MockFunction]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 28,
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 14,
          },
          {},
          {
            "backgroundColor": "#E9F1EB",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "600",
            },
            {
              "color": "#1A2520",
            },
          ]
        }
      >
        Cancel
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityLabel="Scheduling meeting"
      accessibilityRole="button"
      disabled={true}
      onPress={[MockFunction]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 28,
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 14,
          },
          {},
          {
            "backgroundColor": "#1A2520",
          },
        ]
      }
    >
      <ActivityIndicator
        color="#FFFFFF"
        size="small"
      />
    </TouchableOpacity>
  </View>
</View>
`;
